##############
Meliae Changes
##############

.. contents:: List of Releases
   :depth: 1

Meliae 0.4
##########

:0.4: (not released yet)

* We now only compile against Cython. I've finally hit some issues that
  I don't want to work around. Namely sizeof(Class) doesn't work under
  even pyrex 0.9.9. (John Arbash Meinel)

Meliae 0.3
##########

:0.3: 2010-08-02

The main update is the ability to do more queries on a subset of
the object graph. ``om.summarize(starting_at, excluding=[address])``
lets you find out what is more directly "owned" by a given object.

* Add ``__sizeof__`` members to a lot of the core classes (IntSet,
  etc.) (John Arbash Meinel)

* ``ObjectManager.compute_total_size()`` now only computes the size of
  a single object, rather than all objects. All objects took too long
  to be useful anyway, better to make it easier to use the useful api.
  (John Arbash Meinel)

* ``obj.iter_recursive_refs()`` can now be used to find all objects
  referenced from this object (including obj). It can also take an
  iterable of object addresses to exclude. Which makes it easy to ask,
  "What objects are accessible from X that aren't accessible from Y?"
  (John Arbash Meinel)

* ``ObjectManager.summarize()`` can now take an object and an exclusion
  list, and summarize the referenced objects. This can be quite useful
  when you want to look at just a subset of the graph. The syntax is
  ``ObjectManager.summarize(obj, [not_address1, not_address2])``.
  (John Arbash Meinel)

* ``obj.all()`` and ``obj.compute_total_size()`` helpers. These let you
  get the set of referenced objects matching the type (like
  ``om.get_all()``). But they *also* allow you to pass an exclusion
  list, so you can only get things reachable from here and not
  reachable from there. (John Arbash Meinel)


Meliae 0.2.1
############

:0.2.1: 2010-07-20

* When dumping a ``PyFrame`` look at the function object for
  ``co_name``, so you don't have to wander through the references to